--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ serde_json = "1.0.140"
 arrow-select = "54.3.0"
 futures = "0.3"
 rand = "0.9.0"
+iceberg = { "git" = "https://github.com/apache/iceberg-rust" }
+iceberg-catalog-rest = { "git" = "https://github.com/apache/iceberg-rust" }
+
 
 [[bin]]
 name = "gen"
